--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
        <button class ="button is-large is-info" id="loginBtn" type="submit">Login</button>
        <button class ="button is-large is-info" id="registerBtn" type="submit">Registration</button>
     </section>
+    <div class="validateRegister" style="color:red;"></div>
 
         <div class="loginform" style="display: none;">
             <table>
@@ -30,7 +31,6 @@
         </div>
 
         <div class="registerform" style="display: none;">
-            <div class="validateRegister" style="color:red;"></div>
             <table>
                 <tbody>
                     <tr>
@@ -39,7 +39,7 @@
                     </tr>
                     <tr>
                         <td><label for="password">Password</label></td>
-                        <td><input type="password" id="password" style="border-color:blue;"/></td>                  
+                        <td><input type="password" id="password" style="border-color:blue;" /></td>                  
                     </tr>
                     <tr>
                         <td><label for="telefon">Telefon</label></td>
@@ -53,6 +53,7 @@
             </table>
             <button class ="button is-large is-info" id="registerFormBtn" type="submit">Register</button>
         </div>
+<script  src="./src/const.js" defer></script>
 <script  src="./src/class.js" defer></script>
 </body>
 </html>
